--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;500;600;700&family=Bodoni+Moda:wght@400;700&family=Merriweather:wght@300;400;700&family=Oswald:wght@300;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Modern Design - Los Angeles</title>
   </head>
   <body>
     <div id="root"></div>
